[package]
name = "rain-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    "MouseEvent",
    "Performance",
    "Window",
] }
